searching a user is done
adding user remain searching user is done now work on chat thing once I get the logic for chat in firebase firestore

--- a/app/src/main/res/drawable/chat_sent_layout.xml
+++ b/app/src/main/res/drawable/chat_sent_layout.xml
@@ -12,7 +12,7 @@
     android:endColor="#6512E1">
     <!-- Define color percentages -->
     <item
-        android:offset="0%"
+        android:offset="0.0"
         android:color="#8E2DE2"/> <!-- Start color -->
     <item
         android:offset="0.83"
