--- a/app/src/main/res/layout/fragment_all_user_list.xml
+++ b/app/src/main/res/layout/fragment_all_user_list.xml
@@ -110,6 +110,8 @@
             android:id="@+id/recyclerView"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginHorizontal="20dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             tools:listitem="@layout/layout_history_chat"
