--- a/app/src/main/res/xml/fragment_chat_scene.xml
+++ b/app/src/main/res/xml/fragment_chat_scene.xml
@@ -7,11 +7,11 @@
         <Constraint
             android:layout_height="0dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_width="0dp"
             app:layout_constraintTop_toBottomOf="@+id/fixedLayout"
-            android:id="@+id/recyclerView" />
+            android:id="@+id/recyclerView"
+            app:layout_constraintBottom_toTopOf="@+id/messageText" />
     </ConstraintSet>
 
     <ConstraintSet android:id="@+id/end">
