--- a/app/src/main/res/layout/fragment_info.xml
+++ b/app/src/main/res/layout/fragment_info.xml
@@ -1,14 +1,76 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.infoPackage.InfoFragment">
+    android:fillViewport="true"
+    tools:context=".ui.infoPackage.InfoFragment"
+    android:background="@drawable/chat_background"
+    >
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:orientation="vertical">
 
-</FrameLayout>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Tech Info"
+            android:textColor="@color/white"
+            android:textSize="@dimen/_20sdp"
+            android:fontFamily="@font/inter_semibold"
+            android:gravity="center"
+            android:layout_marginTop="25dp"/>
+
+
+        <LinearLayout
+            style="@style/customLinearLayout">
+            <ImageView
+                style="@style/customImageView"
+                />
+            <TextView
+                style="@style/customTextView"
+                android:text="Hello hello"/>
+
+
+
+
+        </LinearLayout>
+
+
+    <LinearLayout
+        style="@style/customLinearLayout">
+        <ImageView
+            style="@style/customImageView"
+            />
+        <TextView
+            style="@style/customTextView"
+            android:text="Hello hello"/>
+
+
+
+
+
+        <pl.droidsonroids.gif.GifImageView
+            android:id="@+id/progress_bar"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:visibility="gone"
+            android:src="@drawable/animation_gif"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+
+
+    </LinearLayout>
+
+
+
+
+</androidx.core.widget.NestedScrollView>
