motion layout changes a little bit
covert full into motion layout

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,5 +19,6 @@
     <color name="highlight_text_color">#2196F3</color>
 
     <color name="imageColor">#DAECE7E7</color>
+    <color name="purple">#E8A1FA</color>
 
 </resources>
