--- a/app/src/main/res/xml/fragment_chat_scene.xml
+++ b/app/src/main/res/xml/fragment_chat_scene.xml
@@ -2,19 +2,50 @@
 <MotionScene xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <ConstraintSet android:id="@+id/start">
+    <ConstraintSet>
         <Constraint android:id="@+id/top" />
         <Constraint
             android:layout_height="0dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_width="0dp"
-            app:layout_constraintTop_toBottomOf="@+id/fixedLayout"
+            app:layout_constraintTop_toBottomOf="@+id/top"
             android:id="@+id/recyclerView"
             app:layout_constraintBottom_toTopOf="@+id/messageText" />
+        <Constraint
+            android:id="@+id/fixedLayout"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_200sdp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+        <Constraint />
+        <Constraint
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/recyclerView" />
+        <Constraint
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/recyclerView" />
+        <Constraint
+            android:id="@+id/send"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            app:layout_constraintTop_toBottomOf="@+id/recyclerView" />
+        <Constraint
+            android:id="@+id/send"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            app:layout_constraintTop_toBottomOf="@+id/recyclerView" />
     </ConstraintSet>
 
-    <ConstraintSet android:id="@+id/end">
+    <ConstraintSet>
         <Constraint android:id="@id/top" />
     </ConstraintSet>
 
@@ -29,5 +60,6 @@
             app:onTouchUp="stop"
             app:touchAnchorId="@id/recyclerView"
             app:touchAnchorSide="top"/>
+        <OnSwipe />
     </Transition>
 </MotionScene>
